test/SemanticAnalysis/Names/UnknownTypeName.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

// CHECK: .loci:5:8: error: unknown type name 'Type'
import Type f();

// CHECK: .loci:8:8: error: unknown type name 'Namespace::Type'
import Namespace::Type g();

// CHECK: 2 errors generated.
